# docs/swagger.yaml
@@ -25,8 +25,8 @@ definitions:
 host: localhost:8080
 info:
   contact: {}
-  description: This is a sample server Petstore server.
-  title: Swagger Example API
+  description: This is a sample server Task server.
+  title: Swagger
   version: v1
 paths:
   /task/create:
@@ -142,28 +142,6 @@ paths:
       consumes:
       - application/json
       description: add by json user
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.UserEntity'
-      summary: Add a new user
-      tags:
-      - users
-  /user/login:
-    post:
-      consumes:
-      - application/json
-      description: add by json user
-      parameters:
-      - description: Update User
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/models.UserEntity'
       produces:
       - application/json
       responses:
